[[bin]]
name = "substrate"
path = "./src/main.rs"

[package]
name = "substrate"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[dependencies]
error-chain = "0.12"
cli = { package = "node-cli", path = "./cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
#vendor = { path = "./vendor" }
vendor = { path = "./vendor" }
node-runtime = { path = "./runtime" }
signer = { path = "./vendor/signer" }

[build-dependencies]
vergen = "3"

