[[bin]]
name = "ladder"
path = "./src/main.rs"

[package]
name = "ladder"
version = "0.5.7"
authors = ["Ladder Network <contact@laddernetwork.io>"]
build = "build.rs"
edition = "2018"

[dependencies]
error-chain = "0.12"
cli = { package = "node-cli", path = "./cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
vendor = { path = "./vendor" }
node-runtime = { path = "./runtime" }
signer = { git = "https://github.com/laddernetwork/signer" }

[build-dependencies]
vergen = "3"

[workspace]
members = [
    "cli",
    "vendor",
    "executor",
    "runtime",
    "ladderml/bank",
    "ladderml/brand",
    "ladderml/erc",
    "ladderml/exchange",
    "ladderml/order",
    "ladderml/otc",
    "ladderml/signcheck",
    "ladderml/staking",
    "ladderml/aura"
]

exclude = [
    "runtime/wasm",
]