[package]
name = "node-cli"
version = "0.1.0"
authors = ["Abmatrix <http://www.abmatrix.org>"]
build = "build.rs"

[dependencies]
log = "0.4"
tokio = "0.1.7"
tokio-timer = "0.2"
futures = "0.1"
exit-future = "0.1"
slog = "^2"
hex-literal = "0.1"
structopt = "0.2.13"
parity-codec = { version = "2.2" }
substrate-cli = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-inherents = { git = "https://github.com/paritytech/substrate" }
substrate-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-service = { git = "https://github.com/paritytech/substrate" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-consensus-aura = { git = "https://github.com/paritytech/substrate" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
node-executor = { git = "https://github.com/paritytech/substrate" }
substrate-keystore = { git = "https://github.com/paritytech/substrate" }
vendor = { path = "../vendor" }
node-runtime = { path = "../runtime" }
node-primitives = { path = "../primitives" }

[dev-dependencies]
substrate-service-test = { git = "https://github.com/paritytech/substrate" }

[build-dependencies]
substrate-cli = { git = "https://github.com/paritytech/substrate" }
structopt = "0.2.13"
clap = "~2.32"
