[package]
name = "node-cli"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io> ", "Ladder Network <contact@laddernetwork.io>"]
description = "Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"

[dependencies]
log = "0.4"
tokio = "0.1.7"
futures = "0.1"
exit-future = "0.1"
cli = { package = "substrate-cli", git = "https://github.com/paritytech/substrate" }
parity-codec = { version = "3.3" }
sr-io = { git = "https://github.com/paritytech/substrate" }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate" }
node-runtime = { path = "../runtime" }
node-primitives = { path = "../primitives" }
hex-literal = "0.2"
substrate-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-service = { git = "https://github.com/paritytech/substrate" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
consensus = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
node-executor = { path = "../executor" }
substrate-keystore = { git = "https://github.com/paritytech/substrate" }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/paritytech/substrate" }
vendor = { path = "../vendor" }
signer = { git = "https://github.com/laddernetwork/signer" }
structopt = "0.2"

[dev-dependencies]
service-test = { package = "substrate-service-test", git = "https://github.com/paritytech/substrate" }

[build-dependencies]
cli = { package = "substrate-cli", git = "https://github.com/paritytech/substrate" }
structopt = "0.2"
