[package]
name = "node-executor"
version = "0.1.0"
authors = ["Abmatrix <http://www.abmatrix.org>"]

[dependencies]
hex-literal = "0.1"
trie-root = "0.9"
parity-codec = "2.2"
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-trie = { git = "https://github.com/paritytech/substrate" }
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }

[dev-dependencies]
wabt = "~0.7.4"

[features]
benchmarks = []
