[package]
name = "node-runtime"
version = "0.1.0"
authors = ["Abmatrix <http://www.abmatrix.org>"]

[dependencies]
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0" }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-aura = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-indices = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-sudo = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-fees = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-session = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-staking = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-finality-tracker = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"substrate-client/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-executive/std",
	"srml-aura/std",
	"srml-indices/std",
	"sr-primitives/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-sudo/std",
    "srml-fees/std",
    "srml-session/std",
    "srml-staking/std",
    "srml-grandpa/std",
    "srml-finality-tracker/std",
	"sr-version/std",
	"serde/std",
	"safe-mix/std",
	"substrate-consensus-aura-primitives/std",
	"hex-literal",
	"rustc-hex",
	"serde",
	"substrate-keyring",
]
