[package]
name = "node-runtime"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Ladder Network <contact@laddernetwork.io>"]
edition = "2018"

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
aura = { package = "srml-aura", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
consensus = { package = "srml-consensus", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
contract = { package = "srml-contract", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
council = { package = "srml-council", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
democracy = { package = "srml-democracy", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
session = { package = "srml-session", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
staking = { package = "srml-staking", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
treasury = { package = "srml-treasury", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
node-primitives = { path = "../primitives", default-features = false }
consensus_aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = { git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", optional = true }
consensus_authorities = { package = "substrate-consensus-authorities", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
brand = { path = "../ladderml/brand", default_features = false}

[dependencies.signcheck]
default_features = false
path = '../ladderml/signcheck'
package = 'ladder-signcheck'

[dependencies.bank]
default_features = false
path = '../ladderml/bank'
package = 'ladder-bank'

[dependencies.exchange]
default_features = false
path = '../ladderml/exchange'
package = 'ladder-exchange'

[dependencies.otc]
default_features = false
path = '../ladderml/otc'
package = 'ladder-otc'

[dependencies.erc]
default_features = false
path = '../ladderml/erc'
package = 'ladder-erc'

[dependencies.order]
default_features = false
path = '../ladderml/order'
package = 'ladder-order'

[features]
default = ["std"]
core = [
	"contract/core",
]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime_primitives/std",
	"support/std",
	"aura/std",
	"balances/std",
	"consensus/std",
	"contract/std",
	"council/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"indices/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"sudo/std",
	"version/std",
	"node-primitives/std",
	"serde",
	"safe-mix/std",
	"client/std",
	"consensus_aura/std",
	"rustc-hex",
	"substrate-keyring",
	"offchain-primitives/std",
	"consensus_authorities/std",
	"signcheck/std",
    "bank/std",
    "exchange/std",
    "runtime-io/std",
    "brand/std",
    "otc/std",
    "erc/std",
    "order/std",
]
