[package]
name = "ladder-erc"
version = "0.1.0"
authors = ["Ladder Network <contact@laddernetwork.io>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.signcheck]
default_features = false
path = "../signcheck"
package = 'ladder-signcheck'
version = '0.1.0'

[dependencies.rustc-hex]
optional = true
rustc-hex = "*"


[features]
default = ["std"]
std = [
    "parity-codec/std",
    "primitives/std",
    "rstd/std",
    "runtime-io/std",
    "support/std",
    "system/std",
    "timestamp/std",
    "sudo/std",
    "consensus/std",
    "version/std",
    "serde_derive",
    "serde",
    "safe-mix/std",
    "sr_primitives/std",
    "balances/std",
    "session/std",
    "signcheck/std",
    "rustc-hex",
]
