[package]
name = "srml-staking"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Ladder Network <contact@laddernetwork.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-keyring = { git = 'https://github.com/paritytech/substrate.git', optional = true }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default-features = false }
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', default-features = false }
primitives = { package = "sr-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
srml-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
consensus = { package = "srml-consensus", git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', default-features = false }
session = { package = "srml-session", git = 'https://github.com/paritytech/substrate.git', default-features = false }

[dev-dependencies]
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git' }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
	"session/std",
	"system/std",
]
