[package]
name = "node-runtime-wasm"
version = "0.1.0"
authors = ["Abmatrix <http://www.abmatrix.org>"]

[lib]
name = "node_runtime"
crate-type = ["cdylib"]

[dependencies]
node-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"node-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
